<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/cinza1">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PlaceholderFragment"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="20dp"
        android:text="@string/e_mail"
        android:textColor="@color/branco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_user_id" />

    <EditText
        android:id="@+id/editText_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:textColor="@color/branco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toEndOf="@+id/tvId"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_buscar_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_user_id"
        android:background="@color/cinza2"
        android:textColor="@color/branco"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/e_mail"
        android:textColor="@color/branco"
        app:layout_constraintEnd_toEndOf="@+id/tvNome"
        app:layout_constraintTop_toTopOf="@+id/editText_email_id" />

    <EditText
        android:id="@+id/editText_email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textWebEmailAddress"
        android:text=""
        android:textColor="@color/branco"
        app:layout_constraintStart_toStartOf="@+id/editText_nome_id"
        app:layout_constraintTop_toBottomOf="@+id/editText_nome_id" />

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nome"
        android:textColor="@color/branco"
        app:layout_constraintEnd_toEndOf="@+id/tvId"
        app:layout_constraintTop_toTopOf="@+id/editText_nome_id" />

    <EditText
        android:id="@+id/editText_nome_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/branco"
        app:layout_constraintStart_toStartOf="@+id/editText_user_id"
        app:layout_constraintTop_toBottomOf="@+id/button_buscar_id" />

    <TextView
        android:id="@+id/tvTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/telefone"
        android:textColor="@color/branco"
        app:layout_constraintEnd_toEndOf="@+id/tvEmail"
        app:layout_constraintTop_toTopOf="@+id/editText_telefone_id" />

    <EditText
        android:id="@+id/editText_telefone_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/branco"
        app:layout_constraintStart_toStartOf="@+id/editText_email_id"
        app:layout_constraintTop_toBottomOf="@+id/editText_email_id" />

    <TextView
        android:id="@+id/tvCep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cep"
        android:textColor="@color/branco"
        app:layout_constraintEnd_toEndOf="@+id/tvTelefone"
        app:layout_constraintTop_toTopOf="@+id/editText_cep_id" />

    <EditText
        android:id="@+id/editText_cep_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/branco"
        app:layout_constraintStart_toStartOf="@+id/editText_telefone_id"
        app:layout_constraintTop_toBottomOf="@+id/editText_telefone_id" />

    <TextView
        android:id="@+id/tvEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/endereco"
        android:textColor="@color/branco"
        app:layout_constraintEnd_toEndOf="@+id/tvCep"
        app:layout_constraintTop_toTopOf="@+id/editText_endereco_id" />

    <EditText
        android:id="@+id/editText_endereco_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/branco"
        app:layout_constraintStart_toStartOf="@+id/editText_cep_id"
        app:layout_constraintTop_toBottomOf="@+id/editText_cep_id" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="/"
        app:layout_constraintEnd_toStartOf="@+id/editText_ano_id"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/editText_mes_id"
        app:layout_constraintTop_toTopOf="@+id/editText_ano_id" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:text="/"
        app:layout_constraintEnd_toStartOf="@+id/editText_mes_id"
        app:layout_constraintStart_toEndOf="@+id/editText_dia_id"
        app:layout_constraintTop_toTopOf="@+id/editText_mes_id" />

    <EditText
        android:id="@+id/editText_dia_id"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:maxLength="2"
        app:layout_constraintStart_toStartOf="@+id/editText_endereco_id"
        app:layout_constraintTop_toBottomOf="@+id/editText_endereco_id"
        android:textColor="@color/branco"/>

    <EditText
        android:id="@+id/editText_mes_id"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2"
        android:text=""
        android:textColor="@color/branco"
        app:layout_constraintStart_toEndOf="@+id/editText_dia_id"
        app:layout_constraintTop_toBottomOf="@+id/editText_endereco_id" />

    <EditText
        android:id="@+id/editText_ano_id"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="4"
        android:text=""
        android:textColor="@color/branco"
        app:layout_constraintStart_toEndOf="@+id/editText_mes_id"
        app:layout_constraintTop_toBottomOf="@+id/editText_endereco_id" />

    <TextView
        android:id="@+id/tvNascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/data_de_nascimento"
        android:textColor="@color/branco"
        app:layout_constraintEnd_toEndOf="@+id/tvEndereco"
        app:layout_constraintTop_toTopOf="@+id/editText_dia_id" />

    <Button
        android:id="@+id/button_atualizar_id1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/atualizar"
        app:layout_constraintEnd_toStartOf="@+id/button_delete_id"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_delete_id"
        android:background="@color/cinza2"
        android:textColor="@color/branco"/>

    <Button
        android:id="@+id/button_delete_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="20dp"
        android:text="@string/deletar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_dia_id"
        android:background="@color/cinza2"
        android:textColor="@color/branco"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>